vlib/v/checker/tests/interface_return_parameter_err.vv
interface Foo {
    bar(string) []Baz
    bar2(Bax) string
}
